# msixpack

./: .editorconfig  .gitignore  Cargo.toml  README.md  appxmanifest.xml  bundle.go  go.mod  go.sum  main.go  msixpack.toml  msixpack.yaml
.github/workflows/: ci.yml
bundle/: bundle.go  bundle_test.go  config.go  download.go  download_test.go  manifest.go  manifest_test.go
cmd/: bundle.go  create.go  pack.go  root.go
msix/: appxmanifest.xml  msixpack.toml
msix/icons/: icon.icns
out-temp/: appxmanifest.xml
src/: bundle.rs  download.rs  main.rs  manifest.rs
testdata/hello/: msixpack.toml  msixpack.yaml
