[package]
name = "msixpack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
quick-xml = { version = "0.38.3", features = ["serde", "serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = { version = "0.9.8", features = ["serde"] }
